Fullscreen and deviantArt fixes
- Made Raccoony overlay appear above fullscreen viewer.
- Added button to exit fullscreen viewer to overlay
- Fixed issues with scraping filenames and watchlist submissions in dA.

--- a/data/pageUi.css
+++ b/data/pageUi.css
@@ -5,7 +5,7 @@
     transition: opacity .4s;
     opacity: .25;
     padding: .25em;
-    z-index: 10000;
+    z-index: 15000;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
     font-size: 14px;
     color: #000;
@@ -32,6 +32,7 @@
     display: none;
 }
 
+/* TODO use Zepto's hide/show mechanism instead */
 #raccoony-ui .raccoony-begin-hide,
 #raccoony-ui.raccoony-begin-hide {
     animation: raccoony-fadeout-anim .3s;
